# where_am_I

./: .gitignore  README.md
src/ball_chaser/: CMakeLists.txt  package.xml
src/ball_chaser/launch/: ball_chaser.launch
src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
src/my_robot/: package.xml
src/my_robot/config/: base_local_planner_params.yaml  config.rviz  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/my_robot/launch/: amcl.launch  robot_description.launch  world.launch
src/my_robot/urdf/: my_robot.xacro
src/my_robot/worlds/: training_world.world
src/pgm_map_creator/: CMakeLists.txt
src/pgm_map_creator/maps/: training_world.yaml
src/pgm_map_creator/msgs/: CMakeLists.txt
src/pgm_map_creator/src/: collision_map_creator.cc
src/pgm_map_creator/world/: training_world.world
